kind-goodnotes-k8s-demo/apps/iris-sklearn-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iris-sklearn-api
  namespace: apps
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway
  hostnames:
    - iris.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: iris-sklearn-api
          port: 80
